added backspace function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <div class="Pad">
            <div class="row" id="row0">
                <button class="cell special-function ac">AC</button>
-               <button class="cell special-function">Back</button>
+               <button class="cell special-function back">Back</button>
            </div>
            <div class="row" id="row1">
                <button class="cell number">7</button>
